After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795018 - Easytag loses other tags when saving
Easytag loses other tags when saving
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.4.x
Other Linux
: Normal normal
: 2.4
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-04-05 22:22 UTC by Philippe Troin
Modified: 2018-04-06 07:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reverse arguments to et_file_tag_copy_other_into, destination is first. (601 bytes, patch)
2018-04-05 22:22 UTC, Philippe Troin
committed Details | Review

Description Philippe Troin 2018-04-05 22:22:31 UTC
Created attachment 370565 [details] [review]
Reverse arguments to et_file_tag_copy_other_into, destination is first.

I've found this issue with Fedora 27, 2.4.3-4.
To reproduce:
1. extract a single track of a well-known CD in rhythmbox as FLAC
2. rhythmbox typically populates the following tags:
	album
	artist
	artistsort
	date
	discid
	discnumber
	genre
	musicbrainz_albumartistid
	musicbrainz_albumid
	musicbrainz_artistid
	musicbrainz_discid
	musicbrainz_trackid
	title
	tracknumber
	tracktotal
3. Open the track with easytag
4. Easytag will complain that the date is wrong (2018-01-01 while it wants 2018) and will mark the file as modified.
5. Save
6. The tag list is now:
	album
	artist
	date
	discnumber
	genre
	title
	tracknumber
	tracktotal

All the unknown tags (musicbrainz-*, artistsort, discid) have been lost.

I've tracked it to swapped arguments with calling et_file_tag_copy_other_into(), the source and destination have been swapped.
With the attached patch, easytag functions correctly.
Comment 1 David King 2018-04-06 07:25:25 UTC
Review of attachment 370565 [details] [review]:

Thanks for the bug report and patch! I pushed it to master as commit b00ed316550df3ae94522455f56e306e659511e5.